now lists aligned correctly

--- a/src/components/Cards/ArtistCard/ArtistCard.module.scss
+++ b/src/components/Cards/ArtistCard/ArtistCard.module.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/constants.scss';
 
 .base {
-  margin: 12px;
+  margin: 12px 0;
   width: 200px;
   height: 300px;
 
