--- a/src/components/Cards/TrackCard/TrackCard.module.scss
+++ b/src/components/Cards/TrackCard/TrackCard.module.scss
@@ -5,7 +5,7 @@ $badge_length_color: rgba(61, 222, 118, 0.8);
 $badge_popularity_color: rgba(219, 219, 219, 0.5);
 
 .base {
-  margin: 12px;
+  margin: 12px 0;
   display: flex;
   justify-content: flex-start;
 
