--- a/src/components/Lists/TracksList/TracksList.module.scss
+++ b/src/components/Lists/TracksList/TracksList.module.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/constants.scss';
 
 .base {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1em;
 }
