--- a/src/components/SearchForm/SearchForm.module.scss
+++ b/src/components/SearchForm/SearchForm.module.scss
@@ -14,11 +14,17 @@
     input {
       margin-right: 20px;
     }
+
+    select {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
   }
 
   &__secondRow {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     align-items: center;
 
